2018-09-18  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1116
	
	Update to internal pressure broadening interface
	
	* src/absorption.cc, jacobian.{cc,h}, src/linefunctions.cc,
	src/linemixing.cc, src/linerecord.cc, src/m_linemixing.cc,
	src/m_linerecord.cc, src/nlte.cc, :  Updated for change in pressure
	and line mixing interface.
	
	* src/linerecord.h:  Where the interface now resides
	
	* src/m_nlte.cc, methods.cc:  Added helper function to
	get quantum identifiers from lines
	
	* src/pressurebroadeningdata.cc,h:  Still tinkering with 
	new pressure/line mixing routine.  Today's changes helps
	
	* src/quantum.cc,h: Helpers for the nlte helper function

2018-09-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1115

	* src/hitran_xsec.cc (XsecRecord::Extract):

	Don't try to apply temperature fit for species that lack data for it.
	Fixes bug reported by Hanna Dunke.

	* src/xml_io_compound_types.cc (xml_read_from_stream):

	Add input sanity checks for XsecRecord.

2018-09-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1114

	* src/m_cloudradar.cc (iyActiveSingleScat): The method now considers
	scat_data_checked.

2018-09-10  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1113

	* src/m_rte.cc(iyEmissionStandard):
	Call to get_stepwise_blackbody_radiation ignored jacobian_do
	flag leading to an out of bounds access in dB_dT. This has
	been fixed.

2018-09-10  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1112

	* src/m_retrieval.cc(covmat1D):
	Fixed bugs in covmat1D report by Jonas Hagen as well as some others
	found in the process.

	* controlfiles/artscomponents/retrieval/*
	Added controlfile and reference files to test covmat1D.

2018-09-06  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1111

	* src/arts_api.cc (get_covariance_matrix_block):
	Fixed bug leading to always returning the first block
	in the matrix.

2018-09-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>
