@@ -1,3 +1,13 @@
+2018-09-19  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1117
+
+	* src/m_microphysics.cc (pndFromPsdBasic):
+
+	Throw runtime error if psd_size_grid contains duplicate values.
+	Avoids assertion in bin_quadweights caused by user input. Reported by
+	Freddy.
+
 2018-09-18  Richard Larsson  <larsson@mps.mpg.de>
 
 	* arts-2-3-1116
